add change % using pixel instead

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
                         <img class="img-responsive" src="images/mug.png" alt="Mug logo">
                     </div>
                     <div class="col-md-5 box-features"><!--Box Feature-->
-                        <h2 class="features">Main Features</h2>
+
                         <ul>
+                          <h2 class="features">Main Features</h2>
                             <li>Holds your favorite drink</li>
                             <li>Energizing color</li>
                             <li>Reminds you to learn</li>
@@ -57,6 +58,9 @@
                 </div>
         </div><!--Body row ends-->
       </div> <!--/End Container Div-->
+      <div class="mockup-overlay">
+      <img src="images/page-mock.png">
+    </div>
   </body>
 </html>
 
